crates/ddlog-syntax/tests/validation/fail/missing_function_arg_commas.dl
// kind:item validate:true
function foo(foo: Bar bar: Baz) {}
